--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="container">
+
         <!-- Section 1 -->
+
         <section class="section-1">
             <h1 class="section-heading">Variety of Foods</h1>
             <div class="section-1-icons">
@@ -26,6 +28,67 @@
                 <i class="fas fa-seedling"></i>
             </div>
         </section>
+
+        <!-- Section 2 -->
+
+        <section class="section-2">
+            <h1 class="section-heading">Popular Meals</h1>
+            <div class="cards-container">
+                <div class="card">
+                    <img class="card-img" src="./images/card-img-1.png" alt="">
+                    <h3 class="card-name">Fish</h3>
+                    <button class="card-btn">Order Now</button>
+                </div>
+                <div class="card">
+                    <img class="card-img" src="./images/card-img-2.png" alt="">
+                    <h3 class="card-name">Cake</h3>
+                    <button class="card-btn">Order Now</button>
+                </div>
+                <div class="card">
+                    <img class="card-img" src="./images/card-img-3.png" alt="">
+                    <h3 class="card-name">Lobster</h3>
+                    <button class="card-btn">Order Now</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section 3 -->
+        <section class="section-3">
+            <h1 class="section-heading">Gallery</h1>
+            <div class="gallery">
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img class="food-img" src="./images/gallery-img-1.jpg" alt="">
+                    <h3 class="food-name">Pancakes</h3>
+                    <p class="food-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque commodi ut maiores odit, quas quia.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img class="food-img" src="./images/gallery-img-2.jpg" alt="">
+                    <h3 class="food-name">Cupcakes</h3>
+                    <p class="food-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque commodi ut maiores odit, quas quia.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img class="food-img" src="./images/gallery-img-3.jpg" alt="">
+                    <h3 class="food-name">Hummus</h3>
+                    <p class="food-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque commodi ut maiores odit, quas quia.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img class="food-img" src="./images/gallery-img-4.jpg" alt="">
+                    <h3 class="food-name">Hamburger</h3>
+                    <p class="food-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque commodi ut maiores odit, quas quia.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img class="food-img" src="./images/gallery-img-5.jpg" alt="">
+                    <h3 class="food-name">Salmon</h3>
+                    <p class="food-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque commodi ut maiores odit, quas quia.</p>
+                </a>
+                <a href="#" class="gallery-link" title="Order Now">
+                    <img class="food-img" src="./images/gallery-img-6.jpg" alt="">
+                    <h3 class="food-name">Vegetables</h3>
+                    <p class="food-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque commodi ut maiores odit, quas quia.</p>
+                </a>
+            </div>
+        </section>
+
     </div>
 </body>
 <script src="app.js"></script>
