--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title>Foods</title>
 </head>
 <body>
+
+    <!-- Navbar -->
+
+    <nav class="navbar target">
+        <ul>
+            <li><a href="#" class="navbar-link"><i class="fas fa-home"></i><span>Home</span></a></li>
+            <li><a href="#" class="navbar-link"><i class="fas fa-utensils"></i><span>Meals</span></a></li>
+            <li><a href="#" class="navbar-link"><i class="fas fa-hamburger"></i><span>Burger</span></a></li>
+            <li><a href="#" class="navbar-link"><i class="fas fa-pizza-slice"></i><span>Pizza</span></a></li>
+            <li><a href="#" class="navbar-link"><i class="fas fa-blender-phone"></i><span>Contact</span></a></li>
+        </ul>
+    </nav>
+    <div class="menu target"></div>
+
     <div class="container">
 
         <!-- Section 1 -->
@@ -53,6 +67,7 @@
         </section>
 
         <!-- Section 3 -->
+
         <section class="section-3">
             <h1 class="section-heading">Gallery</h1>
             <div class="gallery">
@@ -89,6 +104,20 @@
             </div>
         </section>
 
+        <!-- section 4 -->
+
+        <section class="section-4">
+            <div class="section-4-text">
+                <h2 class="section-4-heading">Sign Me Up</h2>
+                <p class="section-4-paragraph">Be the first to know about new products</p>
+            </div>
+            <form action="" class="signup-form">
+                    <input type="email" class="signup-form-input" placeholder="Enter Your Email">
+                    <button type="submit" class="signup-form-btn"><i class="fas fa-arrow-right"></i></button> 
+            </form>
+            <p class="copyright">Foods &copy; All Rights Reserved.</p>
+        </section>
+        
     </div>
 </body>
 <script src="app.js"></script>
